2006-02-22  Simon Budig  <simon@gimp.org>

	* app/vectors/gimpvectors-import.c: fix the import of svg circles.

2006-02-21  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-data.[ch]: new files which keep the
	plug-in data list.

	* app/pdb/procedural_db.[ch]: removed here, it only cluttered the
	file with unrelated functionality.

	* app/core/gimp.[ch]
	* app/actions/plug-in-commands.c
	* tools/pdbgen/pdb/procedural_db.pdb: changed accordingly.

	* app/pdb/procedural_db_cmds.c: regenerated.

2006-02-20  Michael Natterer  <mitch@gimp.org>

	* app/actions/file-actions.c (file_actions_setup)
	* app/actions/plug-in-actions.c (plug_in_actions_setup): use ""
	instead of NULL for "no label" on an action (we can't rely on the
	stock item to provide the label that prevents the gtk warning from
	firing).

2006-02-20  Karine Delvare  <kdelvare@nerim.net>

	* app/tools/gimprectangletool.c: zero division check should be
	changed according to the aspect redefinition

2006-02-20  Simon Budig  <simon@gimp.org>

	* app/tools/gimppaintoptions-gui.c: allow maximum jitter of 5.0.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* app/config/gimpcoreconfig.[ch]
	* app/config/gimprc-blurbs.h
	* app/core/gimp.[ch]: keep a history of recently used plug-ins.

	* app/plug-in/plug-in-run.[ch] (plug_in_repeat): pass an index
	into the plug-in history.

	* app/actions/plug-in-actions.c
	* app/actions/plug-in-commands.c
	* app/menus/plug-in-menus.c
	* menus/image-menu.xml.in: added a submenu with recently used
	plug-ins to the Filters menu. Fixes bug #148855.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpmagnifytool.c: renamed to Zoom tool.

	* menus/image-menu.xml.in: changed accordingly.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfgbgview.c (gimp_fg_bg_view_expose): tweaked
	drawing of shadows.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* etc/sessionrc: set tab-style for dockables.
