@@ -23,6 +23,8 @@
 
 #include <glib.h>
 
+#include <libgimpcolor/gimpcolortypes.h>
+
 #include "gimpwire.h"
 
 
@@ -429,6 +431,18 @@ _gimp_wire_read_string (GIOChannel  *channel,
 }
 
 gboolean
+_gimp_wire_read_color (GIOChannel *channel,
+                       GimpRGB    *data,
+                       gint        count,
+                       gpointer    user_data)
+{
+  g_return_val_if_fail (count >= 0, FALSE);
+
+  return _gimp_wire_read_double (channel,
+                                 (gdouble *) data, 4 * count, user_data);
+}
+
+gboolean
 _gimp_wire_write_int32 (GIOChannel    *channel,
                         const guint32 *data,
                         gint           count,
@@ -568,6 +582,18 @@ _gimp_wire_write_string (GIOChannel  *channel,
     }
 
   return TRUE;
+}
+
+gboolean
+_gimp_wire_write_color (GIOChannel    *channel,
+                        const GimpRGB *data,
+                        gint           count,
+                        gpointer       user_data)
+{
+  g_return_val_if_fail (count >= 0, FALSE);
+
+  return _gimp_wire_write_double (channel,
+                                  (gdouble *) data, 4 * count, user_data);
 }
 
 static guint
