@@ -101,6 +101,10 @@ gboolean  _gimp_wire_read_string  (GIOChannel      *channel,
                                    gchar          **data,
                                    gint             count,
                                    gpointer         user_data) G_GNUC_INTERNAL;
+gboolean  _gimp_wire_read_color   (GIOChannel      *channel,
+                                   GimpRGB         *data,
+                                   gint             count,
+                                   gpointer         user_data) G_GNUC_INTERNAL;
 gboolean  _gimp_wire_write_int32  (GIOChannel      *channel,
                                    const guint32   *data,
                                    gint             count,
@@ -119,6 +123,10 @@ gboolean  _gimp_wire_write_double (GIOChannel      *channel,
                                    gpointer         user_data) G_GNUC_INTERNAL;
 gboolean  _gimp_wire_write_string (GIOChannel      *channel,
                                    gchar          **data,
+                                   gint             count,
+                                   gpointer         user_data) G_GNUC_INTERNAL;
+gboolean  _gimp_wire_write_color  (GIOChannel      *channel,
+                                   const GimpRGB   *data,
                                    gint             count,
                                    gpointer         user_data) G_GNUC_INTERNAL;
 
